--- a/Iconizer/Resources/AppIcon_iPhone.json
+++ b/Iconizer/Resources/AppIcon_iPhone.json
@@ -4,63 +4,63 @@
       "idiom" : "iphone",
       "size" : "60x60",
       "scale" : "3x",
-      "filename" : "iphone-appicon@3x.png",
+      "filename" : "iPhone60@3x.png",
       "expected-size" : "180"
     },
     {
       "idiom" : "iphone",
       "size" : "40x40",
       "scale" : "2x",
-      "filename" : "iphone-spotlight@2x.png",
+      "filename" : "iPhone40@2x.png",
       "expected-size" : "80"
     },
     {
       "idiom" : "iphone",
       "size" : "40x40",
       "scale" : "3x",
-      "filename" : "iphone-spotlight@3x.png",
+      "filename" : "iPhone40@3x.png",
       "expected-size" : "120"
     },
     {
       "idiom" : "iphone",
       "size" : "60x60",
       "scale" : "2x",
-      "filename" : "iphone-appicon@2x.png",
+      "filename" : "iPhone60@2x.png",
       "expected-size" : "120"
     },
     {
       "idiom" : "iphone",
       "size" : "57x57",
       "scale" : "1x",
-      "filename" : "iphone-oldAppicon@1x.png",
+      "filename" : "iPhone57.png",
       "expected-size" : "57"
     },
     {
       "idiom" : "iphone",
       "size" : "29x29",
       "scale" : "2x",
-      "filename" : "iphone-settings@2x.png",
+      "filename" : "iPhone29@2x.png",
       "expected-size" : "58"
     },
     {
       "idiom" : "iphone",
       "size" : "29x29",
       "scale" : "1x",
-      "filename" : "iphone-settings@1x.png",
+      "filename" : "iPhone29.png",
       "expected-size" : "29"
     },
     {
       "idiom" : "iphone",
       "size" : "29x29",
       "scale" : "3x",
-      "filename" : "iphone-settings@3x.png",
+      "filename" : "iPhone29@3x.png",
       "expected-size" : "87"
     },
     {
       "idiom" : "iphone",
       "size" : "57x57",
       "scale" : "2x",
-      "filename" : "iphone-oldAppicon@2x.png",
+      "filename" : "iPhone57@2x.png",
       "expected-size" : "114"
     }
   ]
